tokenization: word, char tokenization, BPE v1

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -14,3 +14,52 @@
   journal={arXiv preprint arXiv:1301.3781},
   year={2013}
 }
+
+@misc{radford2017learning,
+    title={Learning to Generate Reviews and Discovering Sentiment},
+    author={Alec Radford and Rafal Jozefowicz and Ilya Sutskever},
+    year={2017},
+    eprint={1704.01444},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
+
+@misc{kalchbrenner2016neural,
+    title={Neural Machine Translation in Linear Time},
+    author={Nal Kalchbrenner and Lasse Espeholt and Karen Simonyan and Aaron van den Oord and Alex Graves and Koray Kavukcuoglu},
+    year={2016},
+    eprint={1610.10099},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
+}
+
+@article{lee-etal-2017-fully,
+    title = "Fully Character-Level Neural Machine Translation without Explicit Segmentation",
+    author = "Lee, Jason  and
+      Cho, Kyunghyun  and
+      Hofmann, Thomas",
+    journal = "Transactions of the Association for Computational Linguistics",
+    volume = "5",
+    year = "2017",
+    url = "https://www.aclweb.org/anthology/Q17-1026",
+    doi = "10.1162/tacl_a_00067",
+    pages = "365--378",
+}
+
+@misc{zhang2015text,
+    title={Text Understanding from Scratch},
+    author={Xiang Zhang and Yann LeCun},
+    year={2015},
+    eprint={1502.01710},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
+
+@misc{vaswani2017attention,
+    title={Attention Is All You Need},
+    author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
+    year={2017},
+    eprint={1706.03762},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
+}
