--- a/doc/references.bib
+++ b/doc/references.bib
@@ -63,3 +63,12 @@
     archivePrefix={arXiv},
     primaryClass={cs.CL}
 }
+
+@misc{sennrich2015neural,
+    title={Neural Machine Translation of Rare Words with Subword Units},
+    author={Rico Sennrich and Barry Haddow and Alexandra Birch},
+    year={2015},
+    eprint={1508.07909},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
+}
